--- a/src/Components/Employee-Section/Topbar.css
+++ b/src/Components/Employee-Section/Topbar.css
@@ -112,7 +112,7 @@
   flex: 1;
   min-width: 250px;
   background: #ffffffff;
-  padding: 10px 15px;
+  padding: 10px 0x;
   border-radius: 10px;
   text-align:left;
 }
@@ -137,12 +137,7 @@
   font-size: 14px;
 }
 
-.btn-close {
-  background: none;
-  border: none;
-  font-size: 20px;
-  cursor: pointer;
-}
+
 
 @keyframes fadeIn {
   from { opacity: 0; transform: translateY(-5px); }
